--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,23 @@
 {
-  "name": "gmponos/CakeMap",
+  "name": "Cake/CakeMap",
   "description": "A CakePHP helper to let u use transparently google maps",
   "type": "helper",
   "keywords": [
     "helper",
     "google_maps"
   ],
+  "support": {
+    "issues": "https://github.com/gmponos/CakeMap/issues"
+  },
   "homepage": "http://github.org/gmponos/CakeMap",
   "license": "MIT",
   "require": {
-    "php": ">=5.3.0",
-    "cakephp/cakephp-codesniffer": "1.*",
-    "ext-mcrypt": "*"
+    "php": ">=5.4.16",
+    "cakephp/cakephp": "^3.1"
   },
+  "minimum-stability": "dev",
   "require-dev": {
+    "cakephp/cakephp-codesniffer": "2.*",
     "phpunit/phpunit": "3.7.*"
   }
 }
