--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,6 @@
   "minimum-stability": "dev",
   "require-dev": {
     "cakephp/cakephp-codesniffer": "2.*",
-    "phpunit/phpunit": "3.7.*"
+    "phpunit/phpunit": "*"
   }
 }
