--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,10 @@
     "phpunit/phpunit": "*"
   },
   "minimum-stability": "dev",
-  "prefer-stable": true
+  "prefer-stable": true,
+  "extra": {
+    "branch-alias": {
+      "dev-master": "3.0.x"
+    }
+  }
 }
