--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
   "prefer-stable": true,
   "extra": {
     "branch-alias": {
-      "dev-master": "3.0.x"
+      "dev-3.x": "3.0.x"
     }
   }
 }
