--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,7 @@
   "require-dev": {
     "cakephp/cakephp-codesniffer": "*",
     "phpunit/phpunit": "*"
-  }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
