--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,29 @@
 {
-  "name": "gmponos/CakeMap",
+  "name": "cakephp/cakephp_cakemap",
   "description": "A CakePHP helper to let u use transparently google maps",
-  "type": "helper",
+  "type": "cakephp-plugin",
+  "license": "MIT",
   "keywords": [
     "helper",
     "google_maps"
   ],
-  "homepage": "http://github.org/gmponos/CakeMap",
-  "license": "MIT",
+  "homepage": "http://github.com/gmponos/CakeMap",
+  "support": {
+    "issues": "https://github.com/gmponos/CakeMap/issues"
+  },
+  "autoload": {
+    "psr-4": {
+      "CakeMap\\": "src",
+      "CakeMap\\Test\\": "tests"
+    }
+  },
   "require": {
-    "php": ">=5.3.0",
-    "cakephp/cakephp-codesniffer": "1.*",
-    "ext-mcrypt": "*"
+    "php": ">=5.4.16",
+    "cakephp/cakephp": "^2.6"
   },
   "require-dev": {
-    "phpunit/phpunit": "3.7.*"
-  }
+    "cakephp/cakephp-codesniffer": "*",
+    "phpunit/phpunit": "*"
+  },
+  "prefer-stable": true
 }
