Removed the skeleton files and various changes mainly docblock on helper

--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,8 @@ composer.lock
 vendor/
 
 ### ApiGen
+apigen.phar
+docs
 /webroot/doc/
 
 ### Custom
@@ -83,6 +85,4 @@ vendor/
 /tags
 =======
 build
-composer.lock
-docs
 vendor
