--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "cakephp/cakephp_cakemap",
+  "name": "cakeoven/cakemap",
   "description": "A CakePHP helper to let u use transparently google maps",
   "type": "cakephp-plugin",
   "license": "MIT",
@@ -10,12 +10,6 @@
   "homepage": "http://github.com/gmponos/CakeMap",
   "support": {
     "issues": "https://github.com/gmponos/CakeMap/issues"
-  },
-  "autoload": {
-    "psr-4": {
-      "CakeMap\\": "src",
-      "CakeMap\\Test\\": "tests"
-    }
   },
   "require": {
     "php": ">=5.4.16",
