--- a/composer.json
+++ b/composer.json
@@ -7,18 +7,18 @@
     "helper",
     "google_maps"
   ],
-  "homepage": "http://github.com/gmponos/CakeMap",
+  "homepage": "http://github.com/cakeoven/CakeMap",
   "support": {
-    "issues": "https://github.com/gmponos/CakeMap/issues"
+    "issues": "https://github.com/cakeoven/CakeMap/issues"
   },
   "require": {
     "php": ">=5.4.16",
-    "cakephp/cakephp": "^2.6"
+    "cakephp/cakephp": "3.*"
   },
   "autoload": {
     "psr-4": {
-      "CakeMap\\": "src",
-      "CakeMap\\Test\\": "tests"
+      "CakeOven\\CakeMap\\": "src",
+      "CakeOven\\CakeMap\\Test\\": "tests"
     }
   },
   "require-dev": {
