Added the alias to master branch on composer

--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,10 @@
   "suggest": {
     "apigen/apigen": "Produce Documentations very easily via DocBlocks"
   },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "3.0.x-dev"
+    }
+  },
   "prefer-stable": true
 }
